--- a/pod.yml
+++ b/pod.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod1
+  name: pod-sun
 spec:
   containers:
-  - name: nginx-arjun
+  - name: nginx-sun
     image: nginx
     ports:
     - containerPort: 8080
